<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landing_title"
        android:textColor="@color/text_color_common"
        android:textSize="28sp"
        android:textFontWeight="@integer/BOLD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landing_description"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_color_common"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textFontWeight="@integer/MEDIUM"
        android:textAllCaps="false"
        android:text="Log in with Facebook"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/facebook_blue"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textFontWeight="@integer/MEDIUM"
        android:textAllCaps="false"
        android:text="@string/email_address_login"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/facebook_blue"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textFontWeight="@integer/MEDIUM"
        android:textAllCaps="false"
        android:text="@string/create_new_account"
        android:layout_marginTop="8dp" />

</LinearLayout>
</layout>