<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landing.SignUpActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="?attr/homeAsUpIndicator"
                android:background="@color/white"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_common"
                android:layout_marginStart="16dp"
                android:textSize="18dp"
                android:textFontWeight="700"
                android:text="@string/almost_there"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_common"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textFontWeight="400"
                android:text="@string/complete_the_form"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="14sp"
                android:textFontWeight="400"
                android:text="@string/mandatory"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:padding="16dp">

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/white"
               android:hint="@string/first_name">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/firstNameEd"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   />

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/white"
               android:layout_marginTop="16dp"
               android:hint="@string/last_name">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/lastNameEd"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   />

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/emailEd"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:background="@color/white"
               android:hint="@string/email_address">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   />

           </com.google.android.material.textfield.TextInputLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp">

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/dobInputLayout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="DD/MM/YYYY"
                   app:boxBackgroundColor="@color/white"
                   app:errorEnabled="true">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/birthdayEditText"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:drawableEnd="@drawable/dob"
                       />

               </com.google.android.material.textfield.TextInputLayout>
           </LinearLayout>


       </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>